tests/ui/rust-2024/unsafe-attributes/unsafe-attributes-fix.stderr
error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:44:6
   |
LL | tt!([no_mangle]);
   |      ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
note: the lint level is defined here
  --> $DIR/unsafe-attributes-fix.rs:3:9
   |
LL | #![deny(unsafe_attr_outside_unsafe)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: wrap the attribute in `unsafe(...)`
   |
LL | tt!([unsafe(no_mangle)]);
   |      +++++++         +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:14:11
   |
LL |         #[$e]
   |           ^^ usage of unsafe attribute
...
LL | ident!(no_mangle);
   | ----------------- in this macro invocation
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
   = note: this error originates in the macro `ident` (in Nightly builds, run with -Z macro-backtrace for more info)
help: wrap the attribute in `unsafe(...)`
   |
LL |         #[unsafe($e)]
   |           +++++++  +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:48:7
   |
LL | meta!(no_mangle);
   |       ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | meta!(unsafe(no_mangle));
   |       +++++++         +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:51:8
   |
LL | meta2!(export_name = "baw");
   |        ^^^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | meta2!(unsafe(export_name = "baw"));
   |        +++++++                   +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:23:11
   |
LL |         #[$e = $l]
   |           ^^ usage of unsafe attribute
...
LL | ident2!(export_name, "bars");
   | ---------------------------- in this macro invocation
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
   = note: this error originates in the macro `ident2` (in Nightly builds, run with -Z macro-backtrace for more info)
help: wrap the attribute in `unsafe(...)`
   |
LL |         #[unsafe($e = $l)]
   |           +++++++       +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:56:3
   |
LL | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(no_mangle)]
   |   +++++++         +

error: aborting due to 6 previous errors

